# Cpp-QtPCL

./: CMakeLists.txt
src/: pcd_view_qt.cpp  pcd_view_qt.ui
